Actually fix gradebook alignment

--- a/less/grades.less
+++ b/less/grades.less
@@ -1,5 +1,5 @@
 #page-grade-report-grader-index {
     #user-grades {
-        margin-top: 4px;
+        margin-top: 20px;
     }
 }
