--- a/style/stellar.css
+++ b/style/stellar.css
@@ -17629,7 +17629,7 @@ a.btn {
   text-decoration: none;
 }
 #page-grade-report-grader-index #user-grades {
-  margin-top: 4px;
+  margin-top: 20px;
 }
 .subfield.subfield_email {
   text-transform: lowercase;
